# CrabbyAuth

crabbyauth/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crabbyauth/benches/: oauth_flows.rs  scim_operations.rs  token_validation.rs
crabbyauth/docs/: architecture.md  getting_started.md  plugins.md  security.md
crabbyauth/docs/api/: openapi.yaml
crabbyauth/examples/basic_oauth/: main.rs
crabbyauth/examples/custom_plugins/: main.rs
crabbyauth/examples/enterprise_setup/: main.rs
crabbyauth/examples/scim_provisioning/: main.rs
crabbyauth/src/: config.rs  error.rs  lib.rs
crabbyauth/src/enterprise/: mod.rs
crabbyauth/src/i18n/: mod.rs
crabbyauth/src/monitoring/: mod.rs
crabbyauth/src/oauth/: client.rs  mod.rs
crabbyauth/src/plugin/: mod.rs
crabbyauth/src/scim/: client.rs  mod.rs
crabbyauth/src/security/: mod.rs
crabbyauth/src/storage/: mod.rs
crabbyauth/src/utils/: mod.rs
crabbyauth/tests/: oauth_flows.rs  plugin_system.rs  scim_operations.rs  security_features.rs
crabbyauth/tests/common/: mod.rs
